# lan866x-tools

./: .gitignore  CLAUDE.md  CMakeLists.txt  PORTING.md  README.md  TOOLS.md  adc.c  adc.cpp  boot.c  build.bat  clickdemo.c  diag.c  discovery.c  discovery.cpp  dncpdisc.c  dncpdisc.cpp  dncpmon.c  dncpmon.cpp  flashimg.c  flashpkg.c  gpio.c  gpio.cpp  gpioevents.c  gpiomax.c  howto_demonstrate.md  i2cid.c  i2cscan.c  i2cscan.cpp  lan8680.c  ledblink.c  ledpwm.c  ledscan.c  ledtoggle.c  ntpsync.c  proxled.c  proxmon.c  pwm.c  pwm.cpp  servicetest.c  spi.c  (+6 more)
docs/: CLICKDEMO.md  COMBODEMO.md  DEMOS.md  FIRMWARE_TRAINS.md  I2CDEMO.md  INTEGRATION_NOTES.md  LAN8680.md  LEDDEMO.md  PWMDEMO.md  RCP_API.md  SPIDEMO.md  comparision.md
firmware/t1s_100baset_bridge/: .gitignore  README.md  build.bat  build_summary.py  cli.py  flash.py  mcc_fixup.sh  mdb_flash.py  setup.bat  setup_compiler.py  setup_flasher.py  smoketest.py  someip_size.py
firmware/t1s_100baset_bridge/docs/: HW_TIMEBASE_BRINGUP_STEPS.md  HW_TIMEBASE_B_C_IMPLEMENTATION.md  HW_TIMEBASE_OPTIONS.md
firmware/t1s_100baset_bridge/docs/img/: render_timing.py
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/: mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/: mcc-config.mc4
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/: HarmonyCore.yml  cmsis.yml  core.yml  dfp.yml  drvExtMacLan865x_0.yml  drv_spi_0.yml  evsys.yml  lib_crypto.yml  lib_emulated_eeprom.yml  lib_wolfcrypt.yml  nvmctrl.yml  sercom1.yml  sys_command.yml  sys_console.yml  sys_console_0.yml  sys_debug.yml  sys_time.yml  tc0.yml  tcpipNetConfig_0.yml  tcpipNetConfig_1.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/: TCP_forwardSlash_IP STACK.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/components/APPLICATION LAYER/: APPLICATION LAYER.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/components/BASIC CONFIGURATION/: BASIC CONFIGURATION.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/components/DATA LINK LAYER/: DATA LINK LAYER.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/components/NETWORK LAYER/: NETWORK LAYER.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/components/PRESENTATION LAYER/: PRESENTATION LAYER.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/T1S_100BaseT_Bridge_default/components/TCP_forwardSlash_IP STACK/components/TRANSPORT LAYER/: TRANSPORT LAYER.yml
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/cmake/T1S_100BaseT_Bridge/default/: user.cmake
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/cmake/T1S_100BaseT_Bridge/default/.generated/: exported.cmake  file.cmake  main.cmake  rule.cmake
firmware/t1s_100baset_bridge/firmware/T1S_100BaseT_Bridge.X/nbproject/: configurations.xml  project.xml
firmware/t1s_100baset_bridge/firmware/src/: T1S_100BaseT_Bridge.X.code-workspace  app.c  app.h  clickdemo_cli.c  dncp_cli.c  env.c  env.h  gpio_cli.c  hwclk_cli.c  i2c_cli.c  lan866x_cli.c  lan866x_cli.h  ntp_sync.c  plat_h3tcpip.c  spi_cli.c  sys_cli.c
firmware/t1s_100baset_bridge/firmware/src/config/default/: configuration.h  definitions.h  harmony-manifest-success.yml  initialization.c  interrupts.c  pin_configurations.csv
firmware/t1s_100baset_bridge/firmware/src/config/default/default.mhc/: settings.yml
firmware/t1s_100baset_bridge/firmware/src/config/default/driver/lan865x/: drv_lan865x.h
firmware/t1s_100baset_bridge/firmware/src/config/default/peripheral/nvic/: plib_nvic.c
firmware/t1s_100baset_bridge/firmware/src/config/default/peripheral/port/: plib_port.c
firmware/t1s_100baset_bridge/firmware/src/config/default/system/command/: sys_command.h
firmware/t1s_100baset_bridge/release/: T1S_100BaseT_Bridge.hex
include/: lan866x_client.hpp  lan866x_common.h  rtp4175.hpp
libepmicrochip/: CMakeLists.txt  VENDORED.md
libepmicrochip/liblan866x/: lan866x_client.cpp  lan866x_client_impl.hpp
libepmicrochip/librtp/: rtp4175.cpp
libepmicrochip/libsomeip/inc/: someip.h
libepmicrochip/libsomeip/src/: someip-client.c  someip-common.h  someip-gen.c  someip-gen.h  someip-pars.c  someip-pars.h  someip-timer.c  someip-timer.h  someip-transmit.c
libepmicrochip/libsomeip/stub/: someip-cfg.h  someip-stub.cpp  windows-udp-handler.c  windows-udp-handler.h
release/: led_map.json
sim/: .gitignore  Makefile  README.md  REPORT.md  SIMULATION_SPEC.md  SYNC_ADC_KONZEPT.md  sim_config.h  sim_main.c  sim_noise.c  sim_noise.h  sweep.sh  sync_core.c  sync_core.h
sim/plot/: feasibility_map.py  plot_results.py
src/: main.c  plat.h  plat_lwip.c.template  plat_win.c  probe.c  rcp.c  rcp.h  someip_stub.c  someip_stub.h  someip_stub_win.c  tool_common.h
tools/: check_rcp_vs_proto.py  make_cube_video.py  plot_timing.py  rtp4175_to_video.py
wireshark/: NTP_FUNKTIONSWEISE.md  NTP_MULTINODE_SZENARIO.md  NTP_SYNC.md  NTP_TIMING.md  NTP_TWO_NODE_CONVERGENCE.md  README.md  bridge_delay.py  example-report.html  ntp_convergence_diagrams.py  ntp_hwclk_capture.pcapng  ntp_trace_plot.py  ntp_trace_plot_hwclk.py  sniff_someip.py  t1s_report.py
wireshark/DNCP/: proto_dncp.lua
wireshark/LAN866x-NTP/: README.md  lan866x_ntp.lua
wireshark/RTP-RFC4175/: README.md  url.txt
wireshark/SOMEIP/: README.md  SOMEIP_eventgroup_identifiers  SOMEIP_method_event_identifiers  SOMEIP_parameter_arrays  SOMEIP_parameter_base_types  SOMEIP_parameter_list  SOMEIP_parameter_strings  SOMEIP_parameter_structs  SOMEIP_service_identifiers  example-capture.pcapng  install.bat  install.sh
(+20 files in other folders)
